Fix text align and justify

--- a/02_landing-page/style.css
+++ b/02_landing-page/style.css
@@ -137,6 +137,8 @@ h2 {
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
+    max-width: 145px;
+    text-align: center;
 }
 
 /* Section Three */
